[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/pause.gd" type="Script" id=2]
[ext_resource path="res://ui/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/QuitMenu.tscn" type="PackedScene" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends 'res://ui/menu.gd'

func enter(pause_node) -> void:
	pause_node._set_paused(false)

func exit(pause_node) -> void:
	pause_node._set_paused(true)

func handle_input(pause_node, event: InputEvent):
	if event.is_action_pressed('ui_pause'):
		emit_signal('menu_changed', pause_node.Menu.UNPAUSED, pause_node.Menu.PAUSE)
"

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BlackOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="MenuBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0
rect_min_size = Vector2( 160, 90 )
color = Color( 0, 0, 0, 0 )

[node name="UnpausedState" type="VBoxContainer" parent="MenuBackground"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = SubResource( 1 )

[node name="PauseMenu" parent="MenuBackground" instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0

[node name="OptionsMenu" parent="MenuBackground" instance=ExtResource( 4 )]
visible = false

[node name="QuitMenu" parent="MenuBackground" instance=ExtResource( 5 )]
visible = false
